@@ -2,21 +2,22 @@
 Hash: SHA256
 
 DIST kipart-0.1.24.zip 126678 SHA256 52ee88b49b550828f0853abfbb424e307f708f778a3c12765138d2162e8c8d00 SHA512 d1e2ff8bbb81bb821b9160a5f2caf5327a8e73d42016accda089f6eb1ca23e1fa23fa22e7ddbdc0348c8d3847358aa9465e7117796aee28e00dc2de70760a61e WHIRLPOOL 8226bde1c8242b3183d8ed346ab53bff33744b91a54aaf9e68fefd668604e63c225d747d462094c6b3b5d736e0e28eada1388e83736f96753d81d86528b09a73
+DIST kipart-0.1.29.tar.gz 110242 SHA256 253e916ebb06109e3bb5018c6ebe875bb61518ba6728617d40f127dd81029b70 SHA512 c86cea1ca7c1c6cb2e946c0fefb43e0748ff2e9a2d52399bfb03c108e69982d93062fa2daf77ede2ae360e10336a6a62a85275093f43c005cf5957486a5848d1 WHIRLPOOL 98b05ef614de89f2e136ba83dc34c3604924472955f327f70e74471971d462c9810831c0ebd2c851db87638145d35716762bfca32ffdc9ce83d111d6de2c82ae
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlj5wFpfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAlmQMwpfFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn1ggA//VmnXp71mZk5wVLFDWt1LldUB+Pw5sSBxYuHg2dYkkTJ09kPNDJgLsYlR
-QuFdlwQiWBAZmEV4G3KrSqoc5vaRYkLteFqBfZYinYn9QJFKghVcLZ+IxCFWDWzO
-cYxgrH0Hyhtw4uTRXBe/TWH2fWh0CTifPriDZrWOMGHe5NJVsV9i8He6o8v92ZhW
-PxXALdRpOrYx8JS3AVLfy62sGCwHdRv6hYWwSV9nQBWIoGWvkM9+rfO9gOuim1Xh
-oGa/Gt26/j8fKzaYNM1HRsJSIeUYW1mY1O9M3+qFMZXKplTDOHR70A0AgImg4sQp
-PF64BAc74jChHSVXQTBysXsP07+Z9cHCYiVQOaptR9Hx55qq73U6iw1vmAdEjBQL
-q99uOf3QOV3HzYcHAqp3ACCYvERMe6uU/aGy6JUhAdyOB/mCciek6AWnwAJtpsC5
-OVg+Jf9IRvQjoaxpREstN292oR7VE9USyfXIKcnzaorreS569Lx7pvQCJ6Q5IVAW
-vzK+5q1kcdYx4BWaV36R8OEe/7yOeEE2GJu2cPYrBlCvqMb/BCm34AOT/000jKnN
-SzGHfhTj8c1wJneoOWA45vOb3nlfQE6XmhW+L6R7DBWSLTZU4GKcA+OJ9DGsEDPK
-rD3rFSVSJBmy96/EqhQpkNBVVXnSSCklVvPZvzQQ0q82Ad588lY=
-=nw+q
+Hn142xAAwIvuZ3BL4uiXlpsNfkYSqVXw89wFjObrE/nITDQPzgdqNSgL3mpvyw+M
+ukVjPLm1Lz5UvCUTQeS1bJKDzHrvU1Uaj631vGL8MFELpz8I0ZdLfQ93kih737Tr
+dNt0fyrk+hLkll0WX6zGQKjeLITtZsvf/okbVbADImulxOUje1dIvxrKMnXE4QbE
+o8ls7u7omLPBPX5xLJqEA59R9Y2CNQIKcZWbBkRUl5micEB2140XVGEwPERJ5KjH
+7DxNynGT1yAwHMltu/wfS4kz/HOoZDe1JpOYRiYcCOXIn0aol2chQCavdpu87LPJ
+c6MZalTvUPtcHf+7OR932jNjD0vxdACqSNoKLcS0PylzxnjHQRxMJ/fhg0t5xZz3
+K14I9Jl9GOjgcIfAoFK5hQ3VUYeScXkl9dA6mQmIxyVVvLNnwAbHjK4AQvzDPfu0
+F0apEh84fNTz5cn2dSFXYWTA0A9yKHADroEx7cNvsva8BlV15tJdiMXgtkeD9ZzD
+C3loMvepimiO+39isLvtwl4aHvGBKwVD4iV5HIvHylHrGiT13KDWf880cdfEyw37
+ME57RsaNV9YmpqFKOyWjwc+tX23b28vUTVG9lj3Y+y2TcJr3ql+ajGgBy6XfiQji
+WXjvEWjeexvthpIzxcz4/hLXLZNZn6a+Ilzdx6nlOIyEnUZQ9Ug=
+=YySA
 -----END PGP SIGNATURE-----
