@@ -1,3 +1,9 @@
+*kipart-0.1.29 (13 Aug 2017)
+
+  13 Aug 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  +kipart-0.1.29.ebuild:
+  sci-electronics/kipart: version bump
+
   21 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   kipart-0.1.24.ebuild:
   sci-electronics/kipart: python3_6 support
